--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel=""  href="Portfolio.js">
-    <link rel="stylesheet" href="Portfolio.css">
+    <link rel=""  href="index.js">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!-- Navigation -->
