--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@ Gained the experience of working in a collaborative environment and communicatin
         </div>
     </footer>
 
-    <script src="js/Portfolio.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
